# composer

./: README.md  pyproject.toml
specs/: composer-v0.md
src/composer/: data_types.py  database.py  embeddings.py  gmail.py  main.py
