[project]
name = "composer"
version = "0.1.0"
description = "Read sent email, store it and generate embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "rich==13.5.2",
    "typer==0.12.5",
    "httpx==0.27.2",
    "vertexai==1.71.1",
    "sentence-transformers==3.4.1",
    "psycopg2==2.9.10",
    "chardet==5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "composer.main:main"